# mc-launcher

./: .gitignore  Cargo.toml  README.md  puff.yml
src/: lib.rs  tests.rs  utils.rs
src/client/: argument.rs  assetindex.rs  classpath.rs  downloads.rs  javaversion.rs  library.rs  mod.rs  rules.rs
src/java/: error.rs  mod.rs  version.rs
src/minecraft/: arguments.rs  configuration.rs  launcher.rs  mod.rs
src/os/: mod.rs  process.rs
