[package]
name = "mc-launcher"
description = "Helpful crate for run Minecraft"
license = "AGPL-3.0-or-later"
keywords = ["minecraft"]
repository = "https://github.com/smokingplaya/mc-launcher"
version = "0.1.2"
edition = "2021"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["process"], optional = true }

[dev-dependencies]
anyhow = "1.0.97"

[features]
default = []
tokio = ["dep:tokio"]